--- a/apps/site/src/app/modules/author/components/author/author.component.scss
+++ b/apps/site/src/app/modules/author/components/author/author.component.scss
@@ -15,6 +15,8 @@
       margin-right: $default-padding;
       margin-bottom: $default-padding;
       float: left;
+      width: 100px;
+      height: 100px;
     }
 
     .content {
