Removed any keypress on paragraph toggles play

--- a/apps/site/src/app/modules/player/components/book-paragraph/book-paragraph.component.html
+++ b/apps/site/src/app/modules/player/components/book-paragraph/book-paragraph.component.html
@@ -3,7 +3,7 @@
   tabindex="0"
   class="{{ PARAGRAPH_CLASS_PREFIX }}{{ index }}"
   (click)="activated.emit(index)"
-  (keyup)="activated.emit(index)"
+  (keydown.enter)="activated.emit(index)"
 >
   {{ text }}
 </p>
