--- a/apps/site/src/app/modules/player/components/book-canvas/book-canvas.component.scss
+++ b/apps/site/src/app/modules/player/components/book-canvas/book-canvas.component.scss
@@ -13,7 +13,8 @@ div {
 
   .scrollable-canvas {
     display: flex;
-    position: absolute;
+    position: relative;
+    overflow-y: hidden;
     flex-direction: column;
     gap: 1rem;
     padding-top: 2 * $default-padding;
@@ -22,7 +23,6 @@ div {
     height: 100%;
     background-color: burlywood;
     -webkit-text-fill-color: rgba(0, 0, 0, 0.88);
-    -webkit-text-stroke: 0;
 
     & * {
       font-family: Literata, sans-serif !important;
