Add custom perfect scroll instead of default on site pages

--- a/apps/site/src/app/modules/authors-by-genre/components/authors-by-genre/authors-by-genre.component.html
+++ b/apps/site/src/app/modules/authors-by-genre/components/authors-by-genre/authors-by-genre.component.html
@@ -1,4 +1,4 @@
-<div class="library-container">
+<div class="container">
   <h1 loading [thenShow]="result">
     <span>Авторы, пишущие в жанре "{{ genreSignal() || '' | genre }}"</span>
     <input
