--- a/apps/site/src/app/modules/main/components/main/main.component.html
+++ b/apps/site/src/app/modules/main/components/main/main.component.html
@@ -12,7 +12,7 @@
     "
   ></mat-progress-bar>
   <mat-sidenav-container>
-    <mat-sidenav #sidenav mode="side" opened="true">
+    <mat-sidenav #sidenav mode="side" opened="true" libPerfectScrollbar>
       <main-menu></main-menu>
       <copyright-owner></copyright-owner>
       <copyright></copyright>
