--- a/apps/site/src/app/modules/settings/components/settings/settings.component.html
+++ b/apps/site/src/app/modules/settings/components/settings/settings.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="container" libPerfectScrollbar>
   <h1>Настройки</h1>
   <form [formGroup]="form" (submit)="onSubmit()">
     <h3>Голос</h3>
