--- a/apps/site/src/app/modules/settings/components/settings/settings.component.scss
+++ b/apps/site/src/app/modules/settings/components/settings/settings.component.scss
@@ -1,7 +1,9 @@
 @use 'vars' as *;
+@use 'mixins' as *;
 @use '@angular/material' as mat;
 
-:host > div {
+.container {
+  @include scrollable-container;
   padding: $default-padding * 2;
 
   form {
