--- a/apps/site/src/app/modules/voice/components/voice.component.html
+++ b/apps/site/src/app/modules/voice/components/voice.component.html
@@ -1,4 +1,4 @@
-<div #container class="voice-container">
+<div #container class="container" libPerfectScrollbar>
   <h1>Форма озвучки произвольного текста</h1>
 
   <textarea
