--- a/apps/site/src/app/modules/welcome/components/welcome.component.html
+++ b/apps/site/src/app/modules/welcome/components/welcome.component.html
@@ -1,4 +1,4 @@
-<div class="welcome-container">
+<div class="container" libPerfectScrollbar>
   <section>
     <p>
       <b>BOOK-PLAY.RU</b> - платформа для прослушивания книг, озвученных
