--- a/apps/site/src/app/modules/authors-by-genre/components/authors-by-genre/authors-by-genre.component.scss
+++ b/apps/site/src/app/modules/authors-by-genre/components/authors-by-genre/authors-by-genre.component.scss
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
 
-  .library-container {
+  .container {
     display: flex;
     flex-direction: column;
     width: 100%;
