--- a/apps/site/src/app/modules/main/components/main/main.component.scss
+++ b/apps/site/src/app/modules/main/components/main/main.component.scss
@@ -1,4 +1,5 @@
 @use 'vars' as *;
+@use 'mixins' as *;
 
 :host {
   height: 100%;
@@ -35,6 +36,10 @@
     mat-sidenav {
       padding: $default-padding;
       width: $main-menu-width;
+
+      ::ng-deep .mat-drawer-inner-container {
+        overflow: visible !important;
+      }
     }
   }
 }
