--- a/apps/site/src/app/modules/voice/components/voice.component.scss
+++ b/apps/site/src/app/modules/voice/components/voice.component.scss
@@ -1,6 +1,8 @@
 @use 'vars' as *;
+@use 'mixins' as *;
 
-.voice-container {
+.container {
+  @include scrollable-container;
   padding: 2 * $default-padding;
 
   textarea {
