--- a/apps/site/src/app/modules/welcome/components/welcome.component.scss
+++ b/apps/site/src/app/modules/welcome/components/welcome.component.scss
@@ -1,7 +1,8 @@
 @use 'vars' as *;
+@use 'mixins' as *;
 
-.welcome-container {
-  display: block;
+.container {
+  @include scrollable-container;
   padding: $default-padding 2 * $default-padding;
 
   section {
