--- a/apps/site/src/app/main/styles/main.scss
+++ b/apps/site/src/app/main/styles/main.scss
@@ -35,8 +35,7 @@ html {
 
   body {
     min-width: $body-min-width;
-    height: 100vh; /* Use vh as a fallback for browsers that do not support Custom Properties */
-    height: calc(var(--vh, 1vh) * 100);
+    height: 100%;
     overflow: hidden;
   }
 }
