--- a/apps/site/src/app/modules/player/components/book-canvas/book-canvas.component.html
+++ b/apps/site/src/app/modules/player/components/book-canvas/book-canvas.component.html
@@ -2,24 +2,27 @@
   @if (bookData !== null) {
   <div class="scrollable-canvas" libPerfectScrollbar cdkVirtualScrollingElement>
     <h1>
-      <a
-        [routerLink]="['/author', bookData.authorId]"
-        title="Посмотреть описание автора"
+      <lib-link
+        [enabled]="bookData.authorId"
+        [libRouterLink]="['/author', bookData.authorId]"
+        [title]="'Посмотреть описание автора'"
       >
         {{ bookData.author.full }}
-      </a>
+      </lib-link>
       -
-      <a
-        [routerLink]="['/book', bookData.id]"
-        title="Посмотреть описание книги"
+      <lib-link
+        [enabled]="bookData.id"
+        [libRouterLink]="['/book', bookData.id]"
+        [title]="'Посмотреть описание книги'"
       >
         {{ bookData.name }}
-      </a>
+      </lib-link>
     </h1>
     <section class="title-picture-container">
-      <a
-        [attr.href]="bookData.id ? '/book/' + bookData.id : undefined"
-        title="Посмотреть описание книги"
+      <lib-link
+        [enabled]="bookData.id"
+        [libRouterLink]="['/book', bookData.id]"
+        [title]="'Посмотреть описание книги'"
       >
         <img
           [src]="coverSrc()"
@@ -28,7 +31,7 @@
           alt="Обложка книги"
           (error)="showDefaultCoverImage($event)"
         />
-      </a>
+      </lib-link>
     </section>
 
     <cdk-virtual-scroll-viewport
