Removed unnecessary fileUploaded event state

--- a/apps/site/src/app/shared/components/main-menu/main-menu.component.html
+++ b/apps/site/src/app/shared/components/main-menu/main-menu.component.html
@@ -3,11 +3,7 @@
     <mat-icon>home</mat-icon>
     Главная
   </a>
-  <a
-    #uploadButton
-    mat-list-item
-    (uploadFile)="fileUploaded($event)"
-    [accept]="'.fb2'"
+  <a mat-list-item (uploadFile)="fileUploaded($event)" [accept]="'.fb2'"
     ><mat-icon>upload</mat-icon>Загрузить
   </a>
   @if (activeBookPresent() | async) {
