--- a/apps/site/src/app/modules/settings/components/settings/settings.component.html
+++ b/apps/site/src/app/modules/settings/components/settings/settings.component.html
@@ -1,6 +1,6 @@
 <div class="container" libPerfectScrollbar>
   <h1>Настройки</h1>
-  <form [formGroup]="form" (submit)="onSubmit()">
+  <form [formGroup]="form">
     <h3>Голос</h3>
     <section>
       <mat-button-toggle-group formControlName="voice" aria-label="Тип голоса">
@@ -26,7 +26,5 @@
       </mat-slider>
       <span>Высокая</span>
     </fieldset>
-
-    <button type="submit">Применить</button>
   </form>
 </div>
