--- a/apps/site/src/app/modules/authors-by-genre/components/authors-by-genre/authors-by-genre.component.html
+++ b/apps/site/src/app/modules/authors-by-genre/components/authors-by-genre/authors-by-genre.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <h1 loading [thenShow]="result">
-    <span>Авторы, пишущие в жанре "{{ genreSignal() || '' | genre }}"</span>
+    <span>Авторы, пишущие в жанре "{{ authorsGenre() || '' | genre }}"</span>
     <input
       (input)="inputFilter($event)"
       placeholder="Поиск по имени автора..."
@@ -8,7 +8,7 @@
     <span #loading></span>
   </h1>
   <ng-template #result>
-    @if (authors.value()) {
+    @if (authors()) {
     <li-virtual-scroll
       [items]="viewAuthors()"
       [gridList]="true"
