Added book play guard and book resolver

--- a/apps/site/src/app/modules/player/components/player/player.component.html
+++ b/apps/site/src/app/modules/player/components/player/player.component.html
@@ -2,7 +2,7 @@
 <ng-container>
   <book-canvas
     [book]="book"
-    (paragraphClick)="playParagraph($event)"
+    (paragraphClick)="startPlayParagraph($event)"
   ></book-canvas>
 </ng-container>
 }
