--- a/apps/site/src/app/modules/settings/components/settings/settings.component.html
+++ b/apps/site/src/app/modules/settings/components/settings/settings.component.html
@@ -12,7 +12,14 @@
     <h3>Скорость</h3>
     <fieldset>
       <span>Медленно</span>
-      <mat-slider discrete min="-10" max="10" step="1" color="accent">
+      <mat-slider
+        discrete
+        [min]="-SETTINGS_VOICE_RATE_DELTA"
+        [max]="SETTINGS_VOICE_RATE_DELTA"
+        step="1"
+        color="accent"
+        (wheel)="mouseWheel('rate', $event)"
+      >
         <input matSliderThumb formControlName="rate" />
       </mat-slider>
       <span>Быстро</span>
@@ -21,7 +28,14 @@
     <h3>Тональность</h3>
     <fieldset>
       <span>Низкая</span>
-      <mat-slider discrete min="-20" max="20" step="1" color="accent">
+      <mat-slider
+        discrete
+        [min]="-SETTINGS_VOICE_PITCH_DELTA"
+        [max]="SETTINGS_VOICE_PITCH_DELTA"
+        step="1"
+        color="accent"
+        (wheel)="mouseWheel('pitch', $event)"
+      >
         <input matSliderThumb formControlName="pitch" />
       </mat-slider>
       <span>Высокая</span>
