--- a/apps/site/src/app/modules/settings/components/settings/settings.component.html
+++ b/apps/site/src/app/modules/settings/components/settings/settings.component.html
@@ -10,6 +10,8 @@
         >
         <mat-button-toggle [value]="Voices.Ermil">Ермил</mat-button-toggle>
         <mat-button-toggle [value]="Voices.Jane">Жанна</mat-button-toggle>
+        <mat-button-toggle [value]="Voices.Zahar">Захар</mat-button-toggle>
+        <mat-button-toggle [value]="Voices.Omazh">Наталья</mat-button-toggle>
       </mat-button-toggle-group>
     </section>
 
