--- a/apps/site/src/app/shared/components/main-header/main-header.component.html
+++ b/apps/site/src/app/shared/components/main-header/main-header.component.html
@@ -15,7 +15,5 @@
   @if (showPlayerButton()) {
   <player-button></player-button>
   }
-  <a href="/"
-    ><img src="assets/images/book-play.ru.png" alt="Book-play.ru"
-  /></a>
+  <a href="/"><img alt="Book-play.ru" /></a>
 </ng-container>
