--- a/apps/site/src/app/shared/components/main-header/main-header.component.scss
+++ b/apps/site/src/app/shared/components/main-header/main-header.component.scss
@@ -26,3 +26,10 @@
     }
   }
 }
+
+body.light :host img {
+  content: url('/assets/images/book-play.ru.light.png');
+}
+body.dark :host img {
+  content: url('/assets/images/book-play.ru.png');
+}
