--- a/apps/site/src/app/modules/authors-by-genre/components/authors-by-genre/authors-by-genre.component.html
+++ b/apps/site/src/app/modules/authors-by-genre/components/authors-by-genre/authors-by-genre.component.html
@@ -1,12 +1,9 @@
 <div class="container">
-  <h1 loading [thenShow]="result">
+  <h5 loading [thenShow]="result">
     <span>Авторы, пишущие в жанре "{{ authorsGenre() || '' | genre }}"</span>
-    <input
-      (input)="inputFilter($event)"
-      placeholder="Поиск по имени автора..."
-    />
+    <input (input)="inputFilter($event)" placeholder="Поиск..." />
     <span #loading></span>
-  </h1>
+  </h5>
   <ng-template #result>
     @if (authors()) {
     <li-virtual-scroll
