--- a/apps/site/src/app/modules/welcome/components/welcome.component.html
+++ b/apps/site/src/app/modules/welcome/components/welcome.component.html
@@ -1,10 +1,8 @@
 <div class="container" libPerfectScrollbar>
-  <section>
-    <p>
-      <b>BOOK-PLAY.RU</b> - платформа для прослушивания книг, озвученных
-      нейросетью.
-    </p>
-  </section>
+  <p>
+    <b>BOOK-PLAY.RU</b>
+    - платформа для прослушивания книг, озвученных нейросетью.
+  </p>
   <h2>{{ environment.RANDOM_AUTHORS_COUNT }} случайных авторов дня:</h2>
   <mat-chip-set aria-label="Авторы">
     @for (author of authors(); track author.full) {
