--- a/apps/site/src/app/main/styles/main.scss
+++ b/apps/site/src/app/main/styles/main.scss
@@ -20,7 +20,7 @@ $light-theme: mat.define-theme(
   (
     color: (
       theme-type: light,
-      primary: mat.$azure-palette,
+      primary: mat.$green-palette,
     ),
   )
 );
@@ -28,17 +28,13 @@ $dark-theme: mat.define-theme(
   (
     color: (
       theme-type: dark,
-      primary: mat.$azure-palette,
+      primary: mat.$green-palette,
     ),
   )
 );
-$typography-config: mat.m2-define-typography-config(
-  $font-family: 'Roboto, "Helvetica Neue", sans-serif',
-  $body-1: mat.m2-define-typography-level(14px, 20px, 400),
-);
 body {
   @include mat.all-component-themes($theme);
-  @include mat.typography-hierarchy($typography-config);
+  @include mat.typography-hierarchy($theme);
 }
 body.light {
   @include mat.all-component-colors($light-theme);
@@ -68,6 +64,11 @@ html {
   }
 
   mat-chip {
+    background-color: var(
+      --mdc-fab-container-color,
+      var(--mat-sys-primary-container)
+    ) !important;
+
     .mdc-evolution-chip__cell {
       display: flex;
       width: 100%;
@@ -81,6 +82,7 @@ html {
         a {
           display: inherit;
           width: inherit;
+          text-decoration: none;
           overflow: hidden !important;
           white-space: nowrap;
           text-overflow: ellipsis;
