--- a/apps/site/src/app/modules/authors-by-genre/components/authors-by-genre/authors-by-genre.component.scss
+++ b/apps/site/src/app/modules/authors-by-genre/components/authors-by-genre/authors-by-genre.component.scss
@@ -12,13 +12,13 @@
     height: 100%;
     padding: 2 * $default-padding;
 
-    h1 {
+    h5 {
       display: flex;
       width: 100%;
       gap: 0;
 
       input {
-        height: 100%;
+        font-size: 1em;
         max-width: 400px;
         margin-left: $default-padding;
         flex: 1;
