Made equalizer presets for yandex tts speech

--- a/apps/site/src/app/main/components/main/main.component.html
+++ b/apps/site/src/app/main/components/main/main.component.html
@@ -13,6 +13,7 @@
       mode="over"
       libPerfectScrollbar
       (click)="sidenav.close()"
+      (mouseleave)="sidenav.close()"
     >
       <main-menu></main-menu>
       <copyright-owner></copyright-owner>
