Voice settings update

--- a/apps/site/src/app/modules/authors-by-genre/components/authors-by-genre/authors-by-genre.component.html
+++ b/apps/site/src/app/modules/authors-by-genre/components/authors-by-genre/authors-by-genre.component.html
@@ -19,7 +19,7 @@
           <lib-tag-link
             [value]="item.id"
             linkPrefix="/author"
-            [title]="'Пишет в жанрах: ' + (item.genres | genres)"
+            [title]="item.genres | genres"
           >
             {{ item.full }}
           </lib-tag-link>
