Added dark mode toggle component

--- a/apps/site/src/app/main/components/main/main.component.html
+++ b/apps/site/src/app/main/components/main/main.component.html
@@ -12,10 +12,10 @@
       #sidenav
       mode="over"
       libPerfectScrollbar
-      (click)="sidenav.close()"
       (mouseleave)="sidenav.close()"
     >
       <main-menu></main-menu>
+      <dark-mode-switcher></dark-mode-switcher>
       <copyright-owner></copyright-owner>
       <copyright></copyright>
     </mat-sidenav>
