--- a/apps/site/src/app/main/components/main/main.component.scss
+++ b/apps/site/src/app/main/components/main/main.component.scss
@@ -29,7 +29,6 @@
   }
 
   mat-sidenav-container {
-    display: block;
     width: 100%;
     height: 100%;
 
@@ -38,7 +37,13 @@
       width: $main-menu-width;
 
       ::ng-deep .mat-drawer-inner-container {
+        display: flex;
+        flex-direction: column;
         overflow: visible !important;
+
+        main-menu {
+          flex-grow: 1;
+        }
       }
     }
   }
