Added dark mode component tests

--- a/apps/site/src/app/main/components/main/main.component.html
+++ b/apps/site/src/app/main/components/main/main.component.html
@@ -12,6 +12,7 @@
       #sidenav
       mode="over"
       libPerfectScrollbar
+      [autoFocus]="false"
       (mouseleave)="sidenav.close()"
     >
       <main-menu></main-menu>
