--- a/apps/site/src/app/modules/authors-by-genre/components/authors-by-genre/authors-by-genre.component.html
+++ b/apps/site/src/app/modules/authors-by-genre/components/authors-by-genre/authors-by-genre.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <h5 loading [thenShow]="result">
-    <span>Авторы, пишущие в жанре "{{ authorsGenre() || '' | genre }}"</span>
+    <span>"{{ authorsGenre() || '' | genre }}", авторы</span>
     <input (input)="inputFilter($event)" placeholder="Поиск..." />
     <span #loading></span>
   </h5>
