--- a/apps/site/src/app/modules/settings/components/settings/settings.component.html
+++ b/apps/site/src/app/modules/settings/components/settings/settings.component.html
@@ -9,7 +9,8 @@
           >Светлана</mat-button-toggle
         >
         <mat-button-toggle [value]="Voices.Ermil">Ермил</mat-button-toggle>
-        <mat-button-toggle [value]="Voices.Piper">Тамара</mat-button-toggle>
+        <mat-button-toggle [value]="Voices.Tamara">Тамара</mat-button-toggle>
+        <mat-button-toggle [value]="Voices.Kirill">Кирилл</mat-button-toggle>
         <mat-button-toggle [value]="Voices.Jane">Жанна</mat-button-toggle>
         <mat-button-toggle [value]="Voices.Zahar">Захар</mat-button-toggle>
         <mat-button-toggle [value]="Voices.Omazh">Наталья</mat-button-toggle>
