Implemented book search FE and BE functionality

--- a/apps/site/src/app/shared/components/main-menu/main-menu.component.html
+++ b/apps/site/src/app/shared/components/main-menu/main-menu.component.html
@@ -15,6 +15,10 @@
     <mat-icon>play_arrow</mat-icon>Плеер
   </a>
   }
+  <a mat-list-item [routerLink]="['books']" routerLinkActive="active">
+    <mat-icon>collections_bookmark</mat-icon>
+    Книги
+  </a>
   <a mat-list-item [routerLink]="['authors']" routerLinkActive="active">
     <mat-icon>person</mat-icon>
     Авторы
