--- a/apps/site/src/app/features/countdown-timer/countdown-timer.component.scss
+++ b/apps/site/src/app/features/countdown-timer/countdown-timer.component.scss
@@ -2,18 +2,17 @@
 
 :host {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  gap: $default-padding;
-  background-color: rgba(212 213 206 / 0.75);
+  background-color: rgba(212 213 206 / 0.85);
   font-family: 'Orbitron', sans-serif;
   padding: 0 $default-padding;
-  width: auto;
+  width: 200px;
   color: black;
   border-radius: $default-border-radius;
 
   countdown {
-    min-width: 85px;
+    min-width: 90px;
   }
 
   .button {
