Implemented countdown setting control in settings page

--- a/apps/site/src/app/features/settings/components/settings/settings.component.html
+++ b/apps/site/src/app/features/settings/components/settings/settings.component.html
@@ -48,5 +48,15 @@
       </mat-slider>
       <span>Высокая</span>
     </fieldset>
+
+    <h3>Таймер выключения</h3>
+    <fieldset class="timer">
+      <ngx-mat-timepicker-field
+        formControlName="timer"
+        [min]="'0:00'"
+        [max]="'23:59'"
+        [format]="24"
+      ></ngx-mat-timepicker-field>
+    </fieldset>
   </form>
 </div>
